# Lab3-algs

./: .coverage  Readme.md  cli.py  main.py  pyproject.toml
src/: benchmark.py  bubble_sort.py  bucket_sort.py  counting_sort.py  factorials.py  fibos.py  generators.py  heap_sort.py  quick_sort.py  radix_sort.py  stack_list.py
tests/: test_bubble_sort.py  test_bucket_sort.py  test_counting_sort.py  test_factorial.py  test_factorial_recursive.py  test_fibo.py  test_fibo_recursive.py  test_heap_sort.py  test_quick_sort.py  test_radix_sort.py  test_stack_list.py  test_value_error.py
